--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165854779-1"></script>
       <script>
+        alert("test");
+        
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
